# ProyectoDeimos

./: CMakeLists.txt  componentefisico.cpp  componentefisico.h  componentesalud.cpp  componentesalud.h  entidad.cpp  entidad.h  final_sprites.qrc  gitignore  mainwindow.cpp  mainwindow.h  menuopciones.cpp  menuopciones.h  pantallainicio.cpp  pantallainicio.h  resources.qrc  sprite.cpp  sprite.h  sprites.qrc  tranformacion.cpp  tranformacion.h
